--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 <header class="header">
   <div class="container">
   <div class="row">
-  <article class="span4"><a class="brand" href="http://templatemonster.com" target="_blank"></a></article>
+  <article class="span4"><a class="brand" href="http://templatemonster.com/help" target="_blank"></a></article>
  <article class="span6">
  <h1><img alt="" src="img/joomla_logo.png"> Joomla Documentation</h1>
   </article> 
