Replaced links to templatemonster.com with links to info.template-help.com

--- a/Documentation (Installation and Editing).html.html
+++ b/Documentation (Installation and Editing).html.html
@@ -374,9 +374,9 @@
     <p>Otherwise you can run Joomla locally on your computer using the local server. To create a local hosting server please use the localhost applications as <b>WAMP</b>, <b>AppServ</b>, <b>MAMP</b> etc. Any of those can be easily installed as any other program and used to run Joomla. </p>
     <p>Please check the tutorials below on how to configure local development environment:</p>
     <ul class="unstyled">
-      <li><i class="icon-film"> </i><a href="http://templatemonster.com/help/how-to-install-appserv-web-development-environment.html">How to install AppServ web development environment</a></li>
-      <li><i class="icon-film"> </i><a href="http://templatemonster.com/help/how-to-install-wamp-web-development-environment.html">How to install WAMP web development environment</a></li>
-      <li><i class="icon-film"> </i><a href="http://templatemonster.com/help/how-to-install-xamp-web-development-environment.html">How to install XAMP web development environment</a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-appserv-web-development-environment.html">How to install AppServ web development environment</a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-wamp-web-development-environment.html">How to install WAMP web development environment</a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-xamp-web-development-environment.html">How to install XAMP web development environment</a></li>
     </ul>
   </div>
 </section>
@@ -448,7 +448,7 @@
 
     <p>&nbsp;</p>
                 
-    <p>You can also check detailed video tutorial on <i class="icon-film"> </i>  <a href="http://templatemonster.com/help/how-to-create-a-database.html">How to create a database</a></p>
+    <p>You can also check detailed video tutorial on <i class="icon-film"> </i>  <a href="http://info.template-help.com/help/how-to-create-a-database.html">How to create a database</a></p>
 
     <div class="box-info"><span>If you have any issues with creating a database please contact your hosting provider for help and assistance. </span></div>
   </article>
@@ -461,7 +461,7 @@
       <ol>
         <li>Open your template package directory and go to the 'joomla' directory</li>
         <li>Select 'unzip.php' and 'fullpackage.zip' files and upload them to your server(
-          <i class="icon-film"> </i> <a href="http://templatemonster.com/help/how-upload-files-server-2.html" target="_blank">How to upload files to server.</a>
+          <i class="icon-film"> </i> <a href="http://info.template-help.com/help/how-upload-files-server-2.html" target="_blank">How to upload files to server.</a>
           )</li>
         <li>Type the path to the 'unzip.php' file on your server (<i class="muted">http://your_domain_name/unzip.php</i>) in your <abbr title="Internet Explorer, Google Chrome, Mozilla Firefox, Opera, Safari etc.">browser</abbr>.</li>
         <li>You should see the following screen:</li>
@@ -556,7 +556,7 @@
               
     <p>For security reasons please delete the "Installation" directory from your Joomla root directory.</p>
 
-    <p><span class="label label-success">Tip:</span> You can view the video tutorial on <i class="icon-film"> </i> <a href="http://templatemonster.com/help/joomla-3-0-how-to-install-joomla-engine.html">How to install Joomla 3 engine</a></p>
+    <p><span class="label label-success">Tip:</span> You can view the video tutorial on <i class="icon-film"> </i> <a href="http://info.template-help.com/help/joomla-3-0-how-to-install-joomla-engine.html">How to install Joomla 3 engine</a></p>
 
     <div class="box-info"><span>Please note: if you finished "Complete Installation" section you can skip next "Template Installation", "Sample data installation" and "Extensions Installation" sections as you have all these elements already installed.</span></div>
   </article>
@@ -640,7 +640,7 @@
 
     <p>&nbsp;</p>
 
-    <p>You can also check the detailed tutorial on <i class="icon-film"> </i><a href="http://templatemonster.com/help/phpmyadmin-how-to-import-sample-data-dump-file.html" target="_blank">how to import SQL file using phpMyAdmin tool</a></p>
+    <p>You can also check the detailed tutorial on <i class="icon-film"> </i><a href="http://info.template-help.com/help/phpmyadmin-how-to-import-sample-data-dump-file.html" target="_blank">how to import SQL file using phpMyAdmin tool</a></p>
   </div>
 
 </section>
