--- a/Documentation (Installation and Editing)_de.html.html
+++ b/Documentation (Installation and Editing)_de.html.html
@@ -374,9 +374,9 @@
     <p> Sonst können Sie  Joomla lokal auf Ihrem Computer via lokalen Server betreiben. Um einen lokalen Server zu erstellen, verwenden Sie bitte die LocalHost-Anwendungen wie <b>WAMP</b>, <b>AppServ</b>, <b>MAMP</b> usw. Alle diese Programms kann man leicht installieren und zur Joomla Betreibung verwenden.  </p>
     <p>Lesen Sie bitte die u.a. Tutorials über die Konfiguration von lokale Entwicklungsumgebung:</p>
     <ul class="unstyled">
-      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-appserv-web-development-environment.html">Wie installiert man AppServ Web-Entwicklungsumgebung</a></li>
-      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-wamp-web-development-environment.html">Wie installiert man WAMP Web-Entwicklungsumgebung </a></li>
-      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-xamp-web-development-environment.html">Wie installiert man XAMP Web-Entwicklungsumgebung</a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-appserv-web-development-environment.html" target="_blank">Wie installiert man AppServ Web-Entwicklungsumgebung</a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-wamp-web-development-environment.html" target="_blank">Wie installiert man WAMP Web-Entwicklungsumgebung </a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-xamp-web-development-environment.html" target="_blank">Wie installiert man XAMP Web-Entwicklungsumgebung</a></li>
     </ul>
   </div>
 </section>
@@ -448,7 +448,7 @@
 
     <p>&nbsp;</p>
                 
-    <p>Schauen Sie bitte auch das ausführliche Video-Tutorial an: <i class="icon-film"> </i>  <a href="http://info.template-help.com/help/how-to-create-a-database.html">Wie man eine Datenbank erstellt</a></p>
+    <p>Schauen Sie bitte auch das ausführliche Video-Tutorial an: <i class="icon-film"> </i>  <a href="http://info.template-help.com/help/how-to-create-a-database.html" target="_blank">Wie man eine Datenbank erstellt</a></p>
 
     <div class="box-info"><span>Falls Sie Probleme beim Erstellen einer Datenbank haben, wenden Sie sich für Support an Ihren Hosting-Anbieter</span></div>
   </article>
@@ -554,7 +554,7 @@
               
     <p> Aus Sicherheitsgründen löschen Sie bitte das "Installation" Verzeichnis von Ihrem Joomla Root. </p>
 
-    <p><span class="label label-success">Tippp:</span> Schauen Sie bitte das Video-Tutorial an: <i class="icon-film"> </i> <a href="http://info.template-help.com/help/joomla-3-0-how-to-install-joomla-engine.html">Wie installiert man die Joomla 3 Engine</a></p>
+    <p><span class="label label-success">Tippp:</span> Schauen Sie bitte das Video-Tutorial an: <i class="icon-film"> </i> <a href="http://info.template-help.com/help/joomla-3-0-how-to-install-joomla-engine.html" target="_blank">Wie installiert man die Joomla 3 Engine</a></p>
 
     <div class="box-info"><span>Beachten Sie bitte: wenn Sie mit dem Bereich " Installation fertiggestellt " (Complete Installation) fertig sind, können Sie die nächste Bereiche "Template Installation", "Beispieldaten Installation" (Sample data installation) und "Erweiterungen  Installation"  (Extensions Installation) überspringen, weil Sie alle diese Elemente schon installiert haben.</span></div>
   </article>
