--- a/Documentation (Installation and Editing)_es.html.html
+++ b/Documentation (Installation and Editing)_es.html.html
@@ -374,9 +374,9 @@
     <p>Por otra parte, Usted  puede ejecutar Joomla localmente en su ordenador con el servidor local. Para crear un servidor de hosting local, utilice las aplicaciones como WAMP, AppServ, MAMP etc. Se puede instalar fácilmente cualquiera de ellas y utilizarlas para ejecutar Joomla. </p>
     <p>Por favor, consulte los tutoriales ofrecidos sobre la configuración del entorno de desarrollo local:</p>
     <ul class="unstyled">
-      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-appserv-web-development-environment.html">¿Cómo se puede instalar el entorno de desarrollo web AppServ?</a></li>
-      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-wamp-web-development-environment.html">¿Cómo se puede instalar el entorno de desarrollo web WAMP?</a></li>
-      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-xamp-web-development-environment.html">¿Cómo se puede instalar el entorno de desarrollo web XAMP? </a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-appserv-web-development-environment.html" target="_blank">¿Cómo se puede instalar el entorno de desarrollo web AppServ?</a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-wamp-web-development-environment.html" target="_blank">¿Cómo se puede instalar el entorno de desarrollo web WAMP?</a></li>
+      <li><i class="icon-film"> </i><a href="http://info.template-help.com/help/how-to-install-xamp-web-development-environment.html" target="_blank">¿Cómo se puede instalar el entorno de desarrollo web XAMP? </a></li>
     </ul>
   </div>
 </section>
@@ -447,7 +447,7 @@
 
     <p>&nbsp;</p>
                 
-    <p>También Usted puede consultar nuestro tutorial <i class="icon-film"> </i>  <a href="http://info.template-help.com/help/how-to-create-a-database.html">sobre la creación de una base de datos.</a></p>
+    <p>También Usted puede consultar nuestro tutorial <i class="icon-film"> </i>  <a href="http://info.template-help.com/help/how-to-create-a-database.html" target="_blank">sobre la creación de una base de datos.</a></p>
 
     <div class="box-info"><span>Si Usted tiene algún problema con la creación de una base de datos, por favor póngase en contacto con su proveedor de hosting para obtener ayuda y asistencia.
 </span></div>
@@ -553,7 +553,7 @@
               
     <p>Por razones de seguridad, por favor elimine el directorio de "Installation" desde la raíz de CMS de Joomla.</p>
 
-    <p><span class="label label-success">Consejo:</span> Usted puede consultar el tutorial <i class="icon-film"> </i> <a href="http://info.template-help.com/help/joomla-3-0-how-to-install-joomla-engine.html">sobre la instalación del motor de Joomla 3.</a> </p>
+    <p><span class="label label-success">Consejo:</span> Usted puede consultar el tutorial <i class="icon-film"> </i> <a href="http://info.template-help.com/help/joomla-3-0-how-to-install-joomla-engine.html" target="_blank">sobre la instalación del motor de Joomla 3.</a> </p>
 
     <div class="box-info"><span>
 Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instalación completa" Usted puede faltar a las secciones "Template Installation/Instalación de plantilla", "Sample data installation/Instalación de datos de muestra" y "Extensions Installation/Instalación de extensiones" ya que Usted tiene todos estos elementos ya instalados.
