--- a/index_de.html
+++ b/index_de.html
@@ -36,7 +36,7 @@
 <header class="header">
   <div class="container">
   <div class="row">
-  <article class="span4"><a class="brand" href="http://templatemonster.com/help" target="_blank"></a></article>
+  <article class="span4"><a class="brand" href="/help/" target="_blank"></a></article>
  <article class="span6">
  <h1><img alt="" src="img/joomla_logo.png"> Joomla Dokumentation</h1>
   </article> 
