Wpapped copyright into span

--- a/index_de.html
+++ b/index_de.html
@@ -1201,7 +1201,7 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <footer>
       <div class="container">        
        Joomla Dokumentation<br>
-      © 2013 Template Monster
+      © 2013 <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
