--- a/index_en.html
+++ b/index_en.html
@@ -1205,7 +1205,7 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
     <footer>
       <div class="container">        
        Joomla Documentation<br>
-      © 2013 Template Monster
+      © 2013 <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
