--- a/index_es.html
+++ b/index_es.html
@@ -1219,7 +1219,7 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
     <footer>
       <div class="container">        
        Joomla Documentation<br>
-      © 2013 Template Monster
+      © 2013 <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
