Replaced chat link Fixed link paths

--- a/index_en.html
+++ b/index_en.html
@@ -461,7 +461,7 @@
   <div class="box-info"><span>Please <b>DO NOT</b> import SQL file if you have a live website as it will totally replace your website database and all your data will be lost.</span> </div>
   <div class="box-error"><span>Beware: before importing SQL file please make sure your database table prefix matches the table prefix in the SQL file.</span> </div>
   <p>You can check the table prefix directly in the database through the database management tool. Check for the tables names. The prefix is a set of symbols before the table name. (<i>e.g. table "jos_assets" prefix is "jos_"</i>). You can also find the database prefix in the "configuration.php" file in your Joomla root directory. Search for the line 19: <code>public $dbprefix = 'jos_';</code> (<i>where prefix is "jos_"</i>)</p>
-  <p>If the table prefixes don't match open "dump.sql" file with your code editor and using the Search &amp; Replace tool (CTRL+F or CTRL+H hotkeys) replace "jos_" table prefix (<i>used in the SQL file</i>) with the one that matches your database. You can check detailed video tutorial on <a href="http://www.templatemonster.com/help/joomla-how-to-change-database-tables-prefix-in-sql-file.html" target="_blank">how to change database prefix in SQL file</a>.</p>
+  <p>If the table prefixes don't match open "dump.sql" file with your code editor and using the Search &amp; Replace tool (CTRL+F or CTRL+H hotkeys) replace "jos_" table prefix (<i>used in the SQL file</i>) with the one that matches your database. You can check detailed video tutorial on <a href="/help/joomla-how-to-change-database-tables-prefix-in-sql-file.html" target="_blank">how to change database prefix in SQL file</a>.</p>
   <p>Now you can import that SQL file to your database. <br>
   To import sample data to your database please perform these simple steps: (check the slides below)</p>
 
@@ -1096,7 +1096,7 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
 
       <p><span class="label label-success">Tip:</span> You can use filter tool above the plugins list to narrow your search.</p>
 
-      <p><i class="icon-film"></i> Feel free to check detailed tutorial on <a href="http://www.templatemonster.com/help/joomla-3-x-how-to-change-google-map-coordinates.html" target="_blank">how to change Google Map coordinates</a></p>
+      <p><i class="icon-film"></i> Feel free to check detailed tutorial on <a href="/help/joomla-3-x-how-to-change-google-map-coordinates.html" target="_blank">how to change Google Map coordinates</a></p>
     </div>
 </section>
 
@@ -1163,7 +1163,7 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
   <div id="help_support">
     <h4>Help and Support</h4>
     <ul class="list">
-      <li><a href="http://www.templatemonster.com/support_index.php?referer=/support.php"  target="_blank">Live chat</a></li>
+      <li><a href="http://chat.template-help.com/" target="_blank">Live chat</a></li>
       <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Help ticket system</a></li>
     </ul>
   </div>
@@ -1174,7 +1174,7 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
       <li><a href="http://docs.joomla.org/Beginners" target="_blank">Joomla! Beginners guide</a></li>
       <li><a href="http://docs.joomla.org/Category:FAQ" target="_blank">Frequently Asked Questions</a></li>
       <li><a href="http://docs.joomla.org/" target="_blank">Joomla! Documentation</a></li>
-      <li><a href="http://www.templatemonster.com/help/cms-blog-templates/joomla/joomla-tutorials/" target="_blank">Joomla! Tutorials</a></li>
+      <li><a href="/help/cms-blog-templates/joomla/joomla-tutorials/" target="_blank">Joomla! Tutorials</a></li>
     </ul>
   </div>
 
