--- a/index_es.html
+++ b/index_es.html
@@ -471,7 +471,7 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
 
   <p>Usted puede verificar el prefijo de la tabla directamente en la base de datos a través de la herramienta de gestión de base de datos. Revise los nombres de las tablas. El prefijo es un conjunto de símbolos antes del nombre de la tabla. (por ejemplo, el prefijo de la tabla "jos_assets" es "jos_"). También Usted puede encontrar el prefijo de la base de datos en el fichero "configuration.php" en el directorio raíz de Joomla. Busque la línea 19: public $dbprefix = 'jos_'; (el prefijo es "jos_").</p>
 
-  <p>Si los prefijos de las tablas no coinciden, abra el archivo "dump.sql" por medio de su editor de código y con la ayuda de la herramienta Buscar y Reemplazar (teclas de acceso rápido CTRL + F o CTRL + H) reemplace el prefijo "jos_" de la tabla (que es utilizado en el archivo SQL) con su prefijo correspondiente. Por favor, revise nuestro tutorial detallado sobre  <a href="http://www.templatemonster.com/help/joomla-how-to-change-database-tables-prefix-in-sql-file.html" target="_blank">el cambio del prefijo de la base de datos en el archivo SQL </a></p>
+  <p>Si los prefijos de las tablas no coinciden, abra el archivo "dump.sql" por medio de su editor de código y con la ayuda de la herramienta Buscar y Reemplazar (teclas de acceso rápido CTRL + F o CTRL + H) reemplace el prefijo "jos_" de la tabla (que es utilizado en el archivo SQL) con su prefijo correspondiente. Por favor, revise nuestro tutorial detallado sobre  <a href="/help/joomla-how-to-change-database-tables-prefix-in-sql-file.html" target="_blank">el cambio del prefijo de la base de datos en el archivo SQL </a></p>
 
   
   <p>Ahora Usted puede importar el archivo SQL a la base de datos.<br>
@@ -1112,7 +1112,7 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
 
       <p><span class="label label-success">Consejo:</span> Usted puede utilizar la herramienta de filtro para concretar su búsqueda.</p>
 
-      <p><i class="icon-film"></i> Por favor, revise el tutorial detallado  <a href="http://www.templatemonster.com/help/joomla-3-x-how-to-change-google-map-coordinates.html" target="_blank">sobre el cambio de coordenadas de Google Map  </a></p>
+      <p><i class="icon-film"></i> Por favor, revise el tutorial detallado  <a href="/help/joomla-3-x-how-to-change-google-map-coordinates.html" target="_blank">sobre el cambio de coordenadas de Google Map  </a></p>
     </div>
 </section>
 
@@ -1177,7 +1177,7 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
   <div id="help_support">
     <h4>Help and Support</h4>
     <ul class="list">
-      <li><a href="http://www.templatemonster.com/support_index.php?referer=/support.php"  target="_blank">chat</a></li>
+      <li><a href="http://chat.template-help.com/" target="_blank">chat</a></li>
       <li><a href="http://esupport.template-help.com/index.php?/Tickets/Submit"  target="_blank">Sistema de tickets</a></li>
     </ul>
   </div>
@@ -1188,7 +1188,7 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
       <li><a href="http://docs.joomla.org/Beginners" target="_blank">Joomla! Guía para principiantes</a></li>
       <li><a href="http://docs.joomla.org/Category:FAQ" target="_blank">Preguntas Más Frecuentes</a></li>
       <li><a href="http://docs.joomla.org/" target="_blank">Joomla! Documentación</a></li>
-      <li><a href="http://www.templatemonster.com/help/cms-blog-templates/joomla/joomla-tutorials/" target="_blank">Joomla! Tutoriales</a></li>
+      <li><a href="/help/cms-blog-templates/joomla/joomla-tutorials/" target="_blank">Joomla! Tutoriales</a></li>
     </ul>
   </div>
 
