Added modules installation section

--- a/index_es.html
+++ b/index_es.html
@@ -95,6 +95,7 @@
                             <li><a href="#complete_install">Instalación Completa</a></li>
                             <li><a href="#template-installation">Instalación de Plantilla</a></li>
                             <li><a href="#sample-data-installation">Instalación de datos de muestra</a></li>
+                            <li><a href="#modules-installation">Modules Installation</a></li>
                            </ul> 
                        </dd>
                      </dl> 
@@ -512,6 +513,18 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
     <p>También puede consultar el tutorial <i class="icon-film"> </i><a href="/help/phpmyadmin-how-to-import-sample-data-dump-file.html" target="_blank">detallado sobre cómo importar archivos SQL con la herramienta phpMyAdmin</a></p>
   </div>
 
+  <div class="block-templates" id="modules-installation">
+    <h3>Modules installation</h3>
+    <p>Joomla themes are provided with additional extensions:  modules, plugins and components that are used to implement various functionality and features. All additional extensions can be installed in copuple of clicks using provided bundle package.</p>
+    <p>Bundle archive can be found in the 'sources' directory of your template package and is called 'pkg_bundle.zip'. It can be easily installed as any other extension or theme through <b>Joomla admin panel > Extensions manager</b>. </p>
+    <ol>
+      <li>Open Joomla administration panel. From the top menu select 'Extensions'. From the dropdown select 'Extensions Manager';</li>
+      <li>Make sure 'Install' section is selected in the left column;</li>
+      <li>Click 'Browse/Choose file' button and select 'sources/pkg_bundle.zip' archive;</li>
+      <li>Click 'Upload and install' button to install all modules. </li>
+    </ol>
+    <figure class="img-polaroid"><img src="img/extensions_manager.jpg" alt="" /></figure>
+  </div>
 </section>
 
 
