Modified modules installation section

--- a/index_en.html
+++ b/index_en.html
@@ -507,12 +507,14 @@
     <p>Joomla themes are provided with additional extensions:  modules, plugins and components that are used to implement various functionality and features. All additional extensions can be installed in copuple of clicks using provided bundle package.</p>
     <p>Bundle archive can be found in the 'sources' directory of your template package and is called 'pkg_bundle.zip'. It can be easily installed as any other extension or theme through <b>Joomla admin panel > Extensions manager</b>. </p>
     <ol>
-      <li>Open Joomla administration panel. From the top menu select 'Extensions'. From the dropdown select 'Extensions Manager';</li>
+      <li>Open Joomla administration panel. From the top menu select '<b>Extensions</b>'. From the dropdown select '<b>Extensions Manager</b>';</li>
       <li>Make sure 'Install' section is selected in the left column;</li>
       <li>Click 'Browse/Choose file' button and select 'sources/pkg_bundle.zip' archive;</li>
       <li>Click 'Upload and install' button to install all modules. </li>
     </ol>
     <figure class="img-polaroid"><img src="img/extensions_manager.jpg" alt="" /></figure>
+    <p>In case your theme contain some extensions that have not been included into '<b>pkg_bundle.zip</b>' you need to install each one separately. This can be done exactly as 'sources/pkg_bundle.zip' installation through '<b>Extensions Manager</b>' interface.</p>
+    <p>Extensions archives file names are usually starting with '<b>mod_</b>', '<b>com_</b>' or '<b>plg_</b>' so you will recognize them easily. </p>
   </div>
 
 </section>
