--- a/index_de.html
+++ b/index_de.html
@@ -94,7 +94,7 @@
                             <li><a href="#complete_install"> Vollständige Installation</a></li>
                             <li><a href="#template-installation">Template Installation</a></li>
                             <li><a href="#sample-data-installation"> Installation von Beispieldaten</a></li>
-                            <li><a href="#modules-installation">Modules Installation</a></li>
+                            <li><a href="#modules-installation">Modulen Installation</a></li>
                            </ul> 
                        </dd>
                      </dl> 
@@ -500,16 +500,18 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
   </div>
 
   <div class="block-templates" id="modules-installation">
-    <h3>Modules installation</h3>
-    <p>Joomla themes are provided with additional extensions:  modules, plugins and components that are used to implement various functionality and features. All additional extensions can be installed in copuple of clicks using provided bundle package.</p>
-    <p>Bundle archive can be found in the 'sources' directory of your template package and is called 'pkg_bundle.zip'. It can be easily installed as any other extension or theme through <b>Joomla admin panel > Extensions manager</b>. </p>
-    <ol>
-      <li>Open Joomla administration panel. From the top menu select 'Extensions'. From the dropdown select 'Extensions Manager';</li>
-      <li>Make sure 'Install' section is selected in the left column;</li>
-      <li>Click 'Browse/Choose file' button and select 'sources/pkg_bundle.zip' archive;</li>
-      <li>Click 'Upload and install' button to install all modules. </li>
-    </ol>
-    <figure class="img-polaroid"><img src="img/extensions_manager.jpg" alt="" /></figure>
+  <h3>Modulen-Installation</h3>
+  <p>Joomla Themen kommen mit zusätzlichen Dateierweiterungen:  Modulen, Plug-ins und Komponenten, die zur Implementierung verschiedener Funktionalitäten und Besonderheiten verwendet werden. Alle sonstige Dateierweiterungen können in ein paar Klicks mit dem bereitgestellten Angebotspaket installiert werden.</p>
+  <p> Das Archiv des Angebotspakets liegt im 'sources'   Verzeichnis ihres Vorlagenpakets. Es heißt  'pkg_bundle.zip'. Sie können es wie jede andere Dateierweiterung oder Thema durch <b>Joomla admin panel > Extensions manager installiert werden </b>. </p>
+  <ol>
+  <li> Öffenen Sie das Joomla Administrationsfeld. Von dem obigen Menü wählen sie '<b>Extensions</b>'. Vom Aufklappmenü wählen Sie'<b>Extensions Manager</b>';</li>
+  <li> Bitte vergewissern Sie sich, dass das 'Install' Teil von der linken Kolonne gewählt ist;</li>
+  <li>Klicken Sie den  'Browse/Choose file' Knopf und wählen Sie 'sources/pkg_bundle.zip' Archiv;</li>
+  <li>Klicken Sie den  'Upload and install' Knopf, um alle Modulen zu installieren. </li>
+  </ol>
+  <figure class="img-polaroid"><img src="img/extensions_manager.jpg" alt="" /></figure>
+  <p>Falles Ihr Thema einige Dateierweiterungen enthält, die in '<b>pkg_bundle.zip</b>' nicht enthalten sind, müssen Sie jede einzelne installieren. Dies wird, wie die  'sources/pkg_bundle.zip' Installation durch das '<b>Extensions Manager</b>' Interface.</p>
+  <p> Die Archiven der Dateierweiterungen-Dateinamen fangen normalerweise mit '<b>mod_</b>', '<b>com_</b>' or '<b>plg_</b>' an, damit Sie sie einfach merken können.  </p>
   </div>
 
   </section>
