--- a/index_es.html
+++ b/index_es.html
@@ -95,7 +95,7 @@
                             <li><a href="#complete_install">Instalación Completa</a></li>
                             <li><a href="#template-installation">Instalación de Plantilla</a></li>
                             <li><a href="#sample-data-installation">Instalación de datos de muestra</a></li>
-                            <li><a href="#modules-installation">Modules Installation</a></li>
+                            <li><a href="#modules-installation">Instalación de módulos</a></li>
                            </ul> 
                        </dd>
                      </dl> 
@@ -514,16 +514,17 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
   </div>
 
   <div class="block-templates" id="modules-installation">
-    <h3>Modules installation</h3>
-    <p>Joomla themes are provided with additional extensions:  modules, plugins and components that are used to implement various functionality and features. All additional extensions can be installed in copuple of clicks using provided bundle package.</p>
-    <p>Bundle archive can be found in the 'sources' directory of your template package and is called 'pkg_bundle.zip'. It can be easily installed as any other extension or theme through <b>Joomla admin panel > Extensions manager</b>. </p>
-    <ol>
-      <li>Open Joomla administration panel. From the top menu select 'Extensions'. From the dropdown select 'Extensions Manager';</li>
-      <li>Make sure 'Install' section is selected in the left column;</li>
-      <li>Click 'Browse/Choose file' button and select 'sources/pkg_bundle.zip' archive;</li>
-      <li>Click 'Upload and install' button to install all modules. </li>
-    </ol>
-    <figure class="img-polaroid"><img src="img/extensions_manager.jpg" alt="" /></figure>
+  <h3> Instalación de módulos </h3>
+  <p> Los temas de Joomla cuentan con extensiones adicionales: módulos, plugins (complementos) y componentes que se utilizan para implementar varias funcionalidades y características. Todas las extensiones adicionales pueden instalarse en un par de clicks usando el bundle (paquete) proporcionado.</p>
+  <p> El archivo bundle (paquete) está ubicado en el directorio de las fuentes de su paquete de plantillas y se llama 'pkg_bundle.zip'. Puede ser instalado fácilmente como cualquier otra extensión o tema a través de <b> Panel de administración de Joomla > Gestor de extensiones </b>. </p>
+  <ol>
+  <li> Abra el panel de administración de Joomla. Del menú principal seleccione'<b>Extensiones</b>'. Del menú desplegable, seleccione '<b> Gestor de extensiones </b>';</li>
+  <li> Asegúrese de que la sección Instalar este seleccionada en la columna izquierda;</li>
+  <li> Haga click en el botón 'Examinar/Escoger Archivo' y seleccione 'sources/pkg_bundle.zip' archivo;</li>
+  <li> Haga click en el botón 'Subir e Instalar' para instalar todos los módulos.</li>
+  </ol>
+  <figure class="img-polaroid"><img src="img/extensions_manager.jpg" alt="" /></figure>
+  <p> En caso de que su tema contenga algunas extensiones que no han sido incluidas en '<b>pkg_bundle.zip</b>' tiene que instalar cada una por separado. Esto puede hacerse exactamente como la 'sources/pkg_bundle.zip' instalación a través de la interfaz del '<b> Gestor de extensiones.</b> p> <p> Los nombres de los archivos de extensiones suelen comenzar con '<b>mod_</b>', '<b>com_</b>' or '<b>plg_</b>' entonces los reconocerá fácilmente. </p>
   </div>
 </section>
 
