--- a/index_es.html
+++ b/index_es.html
@@ -39,7 +39,7 @@
   <div class="row">
   <article class="span4"><a class="brand" href="/help/es/" target="_blank"></a></article>
  <article class="span6">
- <h1><img alt="" src="img/joomla_logo.png"> Documentación Joomla</h1>
+ <h1><img alt="" src="img/joomla_logo.png"> Documentación Joomla 3.x</h1>
   </article> 
   <article class="span2">
     <div class="languages pull-right">
