--- a/index_en.html
+++ b/index_en.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Joomla Documentation</title>
+  <title>Joomla 3.x Documentation</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/bootstrap.css" media="screen">
   <link rel="stylesheet" href="css/responsive.css" media="screen">
@@ -47,7 +47,12 @@
         <li class="active"><a href="index_en.html"><span>English </span><img src="img/flags/gb.png" height="14" width="22" alt="en"></a></li>
         <li><a href="index_es.html"><span>Español </span><img src="img/flags/es.png" height="14" width="22" alt="es"></a></li>
         <li><a href="index_de.html"><span>Deutsch </span><img src="img/flags/de.png" height="14" width="22" alt="de"></a></li>
-        <!-- <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li> -->
+        <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li>
+        <li><a href="index_fr.html"><span>Français</span><img src="img/flags/fr.png" height="14" width="22" alt="fr"></a></li>
+		<li><a href="index_pl.html"><span>Polski</span><img src="img/flags/pl.png" height="14" width="22" alt="pl"></a></li>
+		<li><a href="index_pt_br.html"><span>Português</span><img src="img/flags/pt.png" height="14" width="22" alt="pt"></a></li>
+		<li><a href="index_tr.html"><span>Türk</span><img src="img/flags/tr.png" height="14" width="22" alt="tr"></a></li>
+		<li><a href="index_it.html"><span>Italiano</span><img src="img/flags/it.png" height="14" width="22" alt="it"></a></li>
       </ul>
     </div>
   </article>   
@@ -181,11 +186,11 @@
 
   <div id="file_structure">
     <h4>Files structure</h4>
-    <p>The template package you have downloaded consists of several folders. Let's see what each folder contains :</p>
+    <p>The template package you have downloaded consists of several folders. Let's see what each folder contains:</p>
     <ul class="files_structure">
       <li class="folder"><i class="icon-folder-close"></i> <b>Documentation</b><small class="muted"> - contains documentation files</small>
         <ul>
-          <li class="file"><i class="icon-file"></i> Documentation (Installation and Editing).html<small class="muted"> - main documentation file. You are right here :)</small></li>
+          <li class="file"><i class="icon-file"></i> documentation.html<small class="muted"> - main documentation file. You are right here :)</small></li>
         </ul>
       </li>
       <li class="folder"><i class="icon-folder-close"></i> <b>Joomla</b><small class="muted"> - contains Joomla theme archive, quick install package and unzip script file. </small>
