--- a/index_de.html
+++ b/index_de.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Joomla Dokumentation</title>
+  <title>Joomla 3.x Dokumentatio</title>
   <meta charset="utf-8">
   <link rel="stylesheet" href="css/bootstrap.css" media="screen">
   <link rel="stylesheet" href="css/responsive.css" media="screen">
@@ -47,7 +47,12 @@
         <li><a href="index_en.html"><span>English </span><img src="img/flags/gb.png" height="14" width="22" alt="en"></a></li>
         <li><a href="index_es.html"><span>Español </span><img src="img/flags/es.png" height="14" width="22" alt="es"></a></li>
         <li class="active"><a href="index_de.html"><span>Deutsch </span><img src="img/flags/de.png" height="14" width="22" alt="de"></a></li>
-        <!-- <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li> -->
+        <li><a href="index_ru.html"><span>Русский </span><img src="img/flags/ru.png" height="14" width="22" alt="ru"></a></li>
+        <li><a href="index_fr.html"><span>Français</span><img src="img/flags/fr.png" height="14" width="22" alt="fr"></a></li>
+		<li><a href="index_pl.html"><span>Polski</span><img src="img/flags/pl.png" height="14" width="22" alt="pl"></a></li>
+		<li><a href="index_pt_br.html"><span>Português</span><img src="img/flags/pt.png" height="14" width="22" alt="pt"></a></li>
+		<li><a href="index_tr.html"><span>Türk</span><img src="img/flags/tr.png" height="14" width="22" alt="tr"></a></li>
+		<li><a href="index_it.html"><span>Italiano</span><img src="img/flags/it.png" height="14" width="22" alt="it"></a></li>
       </ul>
     </div>
   </article>       
@@ -185,7 +190,7 @@
     <ul class="files_structure">
       <li class="folder"><i class="icon-folder-close"></i> <b>Documentation</b><small class="muted"> - hier gibt es  Dokumentationen</small>
         <ul>
-          <li class="file"><i class="icon-file"></i> Documentation (Installation and Editing).html<small class="muted"> - die Hauptdokumentation. Sie sind jetzt hier:)</small></li>
+          <li class="file"><i class="icon-file"></i> documentation.html<small class="muted"> - die Hauptdokumentation. Sie sind jetzt hier:)</small></li>
         </ul>
       </li>
       <li class="folder"><i class="icon-folder-close"></i> <b>Joomla</b><small class="muted"> - hat Joomla Theme Dateien</small>
