added missing translation

--- a/index_fr.html
+++ b/index_fr.html
@@ -522,8 +522,8 @@
 	
 	<figure class="img-polaroid"><img alt="" src="img/extensions_manager.jpg"></figure>
 
-	<p>In case your theme contains some extensions which have not been included into '<b>pkg_bundle.zip</b>' you need to install each one separately. This can be done exactly as 'sources/pkg_bundle.zip' installation through the '<b>Extensions Manager</b>' interface.</p>
-	<p>Extensions archives file names usually start with '<b>mod_</b>', '<b>com_</b>' or '<b>plg_</b>' so you will recognize them easily. </p>
+	<p>Si votre th&egrave;me utilise des extensions qui ne sont pas comprises dans &laquo;&nbsp;<b>pkg_bundle.zip</b>,&nbsp;&raquo; il vous faudra les installer s&eacute;par&eacute;ment. Cela se fait exactement de la m&ecirc;me mani&egrave;re que pour l'installation de &laquo;&nbsp;sources/pkg_bundle.zip,&nbsp;&raquo; &agrave; partir de l'interface du &laquo;&nbsp;<b>Gestionnaire d'extensions</b>.&nbsp;&raquo;</p>
+	<p>Le nom de fichier des archives d'extensions commence en g&eacute;n&eacute;ral par &laquo;&nbsp;<b>mod_</b>,&nbsp;&raquo; &laquo;&nbsp;<b>com_</b>,&nbsp;&raquo; ou &laquo;&nbsp;<b>plg_</b>&nbsp;&raquo; afin de les reconna&icirc;tre facilement.</p>
 	</div>
 </section>
 
