added Modules Installation section

--- a/index_pl.html
+++ b/index_pl.html
@@ -99,6 +99,7 @@
                             <li><a href="#complete_install">Kompletna Instalacja</a></li>
                             <li><a href="#template-installation">Instalacja Szablonu</a></li>
                             <li><a href="#sample-data-installation">Instalacja Danych</a></li>
+							<li><a href="#modules-installation">Instalacja Modułów</a></li>
                            </ul> 
                        </dd>
                      </dl> 
@@ -506,6 +507,25 @@
     <p>Możesz sprawdzić szczegółowy tutorial <i class="icon-film"> </i><a href="/help/phpmyadmin-how-to-import-sample-data-dump-file.html" target="_blank">jak importować plik SQL używając narzędzia phpMyAdmi</a></p>
   </div>
 
+  <div id="modules-installation" class="block-templates">
+  <h3>Instalacja Modułów</h3>
+	<p>Szablony Joomla posiadają dodatkowe rozszerzenia: moduły, pluginy oraz komponenty służące do implementacji różnych funkcji. Wszystkie dodatkowe rozszerzenia mogą zostać zainstalowane kilkoma kliknięciami przy użyciu proponowanego pakietu.</p>
+
+	<p>Archiwum pakietu jest umieszczone w pliku 'sources' pakietu szablonu, nazywa się 'pkg_bundle.zip'. Może być z łatwością zaistalowane jak każde inne rozszerzenie czy szablony przy użyciu <b>Panelu administratora Joomla &gt; Menadżera rozszerzeń</b>. </p>
+
+	<ol> 
+      <li>Otwórz panel administracyjny Joomla. Z górnego menu wybierz '<b>Rozszerzeni</b>'. Z rozwijanego menu wybierz '<b>Menadżer Rozszerzeń</b>';</li> 
+      <li>Upewnij się, że sekcja 'Instaluj' jest zaznaczona w kolumnie po lewej stronie;</li> 
+      <li>Kliknij przycisk 'Wybierz plik' i wybierz archiwum 'sources/pkg_bundle.zip';</li> 
+      <li>Kliknij przycisk 'Prześlij i zainstaluj', aby zainstalować wszystkie moduły. </li> 
+    </ol>
+	
+	<figure class="img-polaroid"><img alt="" src="img/extensions_manager.jpg"></figure>
+
+	<p>W wypadku, gdy Twój szablon zawiera rozszerzenia, które nie były dołączone do '<b>pkg_bundle.zip</b>' musisz je zainstalować osobno. Możesz tego dokonać tak samo jak z instalacją 'sources/pkg_bundle.zip' przy użyciu '<b>Menadżera Rozszerzeń</b>'.</p>
+	<p>Nazwy plików zawierające archiwum rozszerzeń zazwyczaj zaczynają się od '<b>mod_</b>', '<b>com_</b>' lub '<b>plg_</b>', więc z łatwością je rozpoznasz. </p>
+  </div>
+  
 </section>
 
 
