--- a/index_de.html
+++ b/index_de.html
@@ -3,6 +3,7 @@
 <head>
   <title>Joomla 3.x Dokumentatio</title>
   <meta charset="utf-8">
+  <link rel="canonical" href="http://www.templatemonster.com/help/quick-start-guide/joomla-templates/master/index_en.html"/>
   <link rel="stylesheet" href="css/bootstrap.css" media="screen">
   <link rel="stylesheet" href="css/responsive.css" media="screen">
   <link rel="stylesheet" href="css/style.css" media="screen">
