add cookie extentsons links

--- a/index_en.html
+++ b/index_en.html
@@ -1204,6 +1204,15 @@ on desktop and iOs or Android mobile devices. Compatible with all modern browser
     <p>At <a href="http://extensions.joomla.org/" target="_blank">extensions.joomla.org</a> you can download more than 6 thousand  modules, plugins and components to add various features to your Joomla website.</p>
   </div>
 
+  <div id="joomla_cookies_warning">
+    <h4>Joomla! Cookie messages</h4>
+    <p>Following the Cookie Law conditions you can add sufficient modules to your website. Module will display a warning message about the cookies used on your website. You can use the following ones:</p>
+    <ul class="list">
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/24689" target="_blank">Cookie Accept</a></li>
+      <li><a href="http://extensions.joomla.org/extensions/site-management/cookie-control/21043" target="_blank">EU e-Privacy Directive</a></li>
+    </ul>
+  </div>
+
   <div id="additional_links">
     <h4>Additional Links</h4>
     <ul class="list">
