add script year

--- a/index_es.html
+++ b/index_es.html
@@ -1239,7 +1239,7 @@ Tenga en cuenta: si Usted ha terminado la sección "Complete Installation/Instal
     <footer>
       <div class="container">        
        Joomla Documentation<br>
-      © 2013 <span id="copyright">Template Monster</span>
+      © <span id="date"></span> <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
