--- a/index_tr.html
+++ b/index_tr.html
@@ -1230,7 +1230,7 @@
     <footer>
       <div class="container">        
        Joomla Dokümantasyon<br>
-      © 2013 <span id="copyright">Template Monster</span>
+      © <span id="date"></span> <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
