--- a/index_de.html
+++ b/index_de.html
@@ -1224,7 +1224,7 @@ Damit Sie Beispieldaten in der Datenbank importieren, fühlen Sie diese leichte 
     <footer>
       <div class="container">        
        Joomla Dokumentation<br>
-      © 2013 <span id="copyright">Template Monster</span>
+      © <span id="date"></span> <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
