--- a/index_fr.html
+++ b/index_fr.html
@@ -1229,7 +1229,7 @@
     <footer>
       <div class="container">        
        Documentation Joomla<br>
-      © 2013 <span id="copyright">Template Monster</span>
+      © <span id="date"></span> <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
