--- a/index_it.html
+++ b/index_it.html
@@ -1228,7 +1228,7 @@
     <footer>
       <div class="container">        
        Documentazione Joomla <br>
-      © 2013 <span id="copyright">Template Monster</span>
+      © <span id="date"></span> <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
