--- a/index_pt_br.html
+++ b/index_pt_br.html
@@ -1245,7 +1245,7 @@
     <footer>
       <div class="container">        
        Documentação do Joomla<br>
-      © 2013 <span id="copyright">Template Monster</span>
+      © <span id="date"></span> <span id="copyright">Template Monster</span>
       </div>
     </footer>
 
